src/objects/OrderApi__Campaign_Page__c.object
<CustomObject>
    <description>Page that can be built by customer to show to user to purchase items.</description>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event that this campaign page will allow registration on</description>
        <inlineHelpText>Event that this campaign page will allow registration on</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Campaign Pages</relationshipLabel>
        <relationshipName>Campaign_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Average_Sale__c</fullName>
        <description>** System Calculated ** Total Revenue / Sales</description>
        <formula>if( OrderApi__Sales__c == 0,0, OrderApi__Total_Revenue__c / OrderApi__Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** Total Revenue / Sales</inlineHelpText>
        <label>Average Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Average_Visitor_Value__c</fullName>
        <description>** System Calculated ** Total Revenue / Visits.</description>
        <formula>if( OrderApi__Visits__c ==0,0, OrderApi__Total_Revenue__c /OrderApi__Visits__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** Total Revenue / Visits.</inlineHelpText>
        <label>Average Visitor Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Campaign Pages</relationshipLabel>
        <relationshipName>Campaign_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Conversion_Rate__c</fullName>
        <description>** System Calculated ** Sales / Visits</description>
        <formula>if( OrderApi__Visits__c ==0,0, OrderApi__Sales__c / OrderApi__Visits__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** Sales / Visits</inlineHelpText>
        <label>Conversions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>The description for the Campaign page record</description>
        <inlineHelpText>Please enter a description for the Campaign Page</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Expenses__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Enter expenses to track ROI</description>
        <inlineHelpText>Enter expenses to track ROI</inlineHelpText>
        <label>Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Footer_Content__c</fullName>
        <description>Custom HTML rendered in the footer of the page.</description>
        <inlineHelpText>Custom HTML rendered in the footer of the page.</inlineHelpText>
        <label>Footer Content</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Goal__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Enter a revenue goal for the campaign page.</description>
        <inlineHelpText>Enter a revenue goal for the campaign page.</inlineHelpText>
        <label>Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Header_Content__c</fullName>
        <description>Custom HTML rendered in the header of the page.</description>
        <inlineHelpText>Custom HTML rendered in the header of the page.</inlineHelpText>
        <label>Header Content</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag that specifies if the page is available for use</description>
        <inlineHelpText>Set this box to true to make the page available for use</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Name__c</fullName>
        <description>The name of the Campaign</description>
        <inlineHelpText>Please provide a unique name for the campaign</inlineHelpText>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SYSTEM</label>
        <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
        <relationshipLabel>Campaign Pages</relationshipLabel>
        <relationshipName>Campaign_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__ROI__c</fullName>
        <description>** System Calculated ** Total Revenue - Expenses.</description>
        <formula>OrderApi__Total_Revenue__c - OrderApi__Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** Total Revenue - Expenses.</inlineHelpText>
        <label>ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** System Calculated ** Number of sales orders generated.</description>
        <inlineHelpText>** System Calculated ** Number of sales orders generated.</inlineHelpText>
        <label>Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shopping_Cart_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the page will auto-integrate with the shopping cart configured for the related Store configuration.</description>
        <inlineHelpText>When checked, the page will auto-integrate with the shopping cart configured for the related Store configuration.</inlineHelpText>
        <label>Shopping Cart Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to the Site to use for page styles and Store</description>
        <inlineHelpText>** Required ** Link to the Site to use for page styles and Store</inlineHelpText>
        <label>SYSTEM</label>
        <referenceTo>PagesApi__Site__c</referenceTo>
        <relationshipLabel>Campaign Pages</relationshipLabel>
        <relationshipName>Campaign_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Source_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional Source Code to tag all transactions generated from the page.</description>
        <inlineHelpText>Optional Source Code to tag all transactions generated from the page.</inlineHelpText>
        <label>Source Code</label>
        <referenceTo>OrderApi__Source_Code__c</referenceTo>
        <relationshipLabel>Campaign Pages</relationshipLabel>
        <relationshipName>Campaign_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to the Store configuration to use if the page has the &quot;Shopping Cart Enabled&quot; checkbox checked.</description>
        <inlineHelpText>** Conditionally Required ** Link to the Store configuration to use if the page has the &quot;Shopping Cart Enabled&quot; checkbox checked.</inlineHelpText>
        <label>SYSTEM</label>
        <referenceTo>OrderApi__Store__c</referenceTo>
        <relationshipLabel>Campaign Pages</relationshipLabel>
        <relationshipName>Campaign_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to the Theme to use for the page styles.</description>
        <inlineHelpText>** Required ** Link to the Theme to use for the page styles.</inlineHelpText>
        <label>SYSTEM</label>
        <referenceTo>PagesApi__Theme__c</referenceTo>
        <relationshipLabel>Campaign Pages</relationshipLabel>
        <relationshipName>Campaign_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Title_Tag__c</fullName>
        <description>Used as the content of the HTML title attribute for the rendered page.</description>
        <inlineHelpText>Used as the content of the HTML title attribute for the rendered page.</inlineHelpText>
        <label>Title Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total_Revenue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>** System Calculated ** Total sales generated from the page.</description>
        <inlineHelpText>** System Calculated ** Total sales generated from the page.</inlineHelpText>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Visits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** System Calculated ** Number of times people have viewed the campaign page - Does not calculate visits from the page preview mode button.</description>
        <inlineHelpText>** System Calculated ** Number of times people have viewed the campaign page - Does not calculate visits from the page preview mode button.</inlineHelpText>
        <label>Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Campaign Page</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Campaign Page ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>